Elementum/src/index.css
@font-face {
  font-family: 'Gebril';
  src: url('/fonts/gerbil.otf') format('opentype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Satoshi";
  src: url('/fonts/Satoshi-Regular.otf') format("opentype");
  font-weight: 400;
  font-style: normal;
}

@import "tailwindcss";

@theme {
  --font-sans: 'Gebril', system-ui, sans-serif;
  --font-satoshi: "Satoshi", sans-serif;
}

@layer base {
  body {
    font-family: var(--font-satoshi);
  }
}

